fixed emailing on mobile

--- a/src/ContactPage/contactPage.css
+++ b/src/ContactPage/contactPage.css
@@ -22,7 +22,7 @@
 }
 .contact-text h1 {
   font-size: 2rem;
-  font-weight: 400;
+  font-weight: 600;
 }
 .contact-text p {
   font-size: 1.5rem;
